<resources>
    <string name="app_name">MovieApp</string>
    <string name="actionBtnPopular">Popular</string>
    <string name="actionCurrentlyBroadcast">currently broadcast</string>
    <string name="actionFavorites">my favorites</string>
    <string name="pleaseWait">Please Wait...</string>
    <string name="titlePopularMovies">Popular Movies</string>
    <string name="titlePlayingNowMovies">Play Now Movies</string>
    <string name="titleFavoriteMovies">Favorite Movies</string>
    <string name="titleDetails">Details</string>
    <string name="strDescription">Description:</string>
    <string name="strPopularity">Popularity:</string>
    <string name="strVoteAverage">Vote average:</string>
    <string name="strVoteCount">Vote count:</string>
    <string name="strAdult">Adult:</string>
    <string name="strVideo">Video:</string>
    <string name="strOriginalLanguage">Original language:</string>
    <string name="toastAddToFavorite">Added to favorites</string>
</resources>